--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 <footer>
     &copy; 2025 - Alexander Rua | Todos los derechos reservados.
     <div class="footer-redes">
-        <a href="https://github.com"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/yustinrua/portafolio"><i class="fab fa-github"></i></a>
         <a href="https://www.instagram.com/yustin.gonzalez.758"><i class="fab fa-instagram"></i></a>
         <a href="https://www.tiktok.com/@yustin__gonzalez"><i class="fab fa-tiktok"></i></a>
     </div>
